# abrazo

./: .gitignore  .gitpod.Dockerfile  Justfile  alias  alias.sh  bash_profile  bashrc  cargo_packages.sh  config.yaml  emacs.env  emacs.service  eslintrc.js  fourmolu.yaml  ghci.conf  gitconfig  haskeline  install  install.conf.yaml  installCargoPackages.sh  installGoPackages.sh  installNPMPackages.sh  installSpacemacs.sh  installStackPackages.sh  installTPM.sh  magit.sh  mgc.sh  mypy.ini  screenrc  spacemacs  stack.yaml  tmux.conf  tmux_eshell.conf  tty-colors.sh  vimrc  xmobarrc
.claude/: settings.local.json
SpaceVim.d/: init.toml
atom/: config.cson  keymap.cson  packages.cson
backup/: install.sh  personal-backup.service  personal-backup.sh  personal-backup.timer
crush/: crush.json  install.sh
emacs.d/: custom.el  early-init.el  emacs_install.sh  init.el
fish/: config.fish  fish_install.fish  fishfile  init.fish
flox/: .gitignore  manifest.toml
jj/: config.toml
keychron/: enable_layout_tools.sh  keychron_k6_pro_ansi_white.layout.json
kitty/: font-include.sh  font-linux.conf  font-macos.conf  install_kitty.sh  kitty.conf  ligatures.conf
leadr/: config.toml  mappings.toml
llama-swap/: Dockerfile  SYSTEM-SERVICE.md  config.yaml  llama-swap.service  run.sh
ludosavi/: fix-flatpak-ca.sh  heroic-patch-scripts.sh  heroic-post.sh  heroic-pre.sh  install.sh  ludusavi-config.yaml  nc-unlock.sh  saves-setup.sh
nushell/: config.nu  regenerate-completions.nu
xmonad/: build  fourmolu.yaml  my-xmonad.cabal  setup.sh  stack.yaml  stock_xmonad.hs  xmonad.hs
(+224 files in other folders)
